# test_language

./: .gitignore  CMakeLists.txt  README.md  main.c  todo_saving.txt
include/: ast.h  compiler.h  interpreter.h  lexer.h  parser.h
src/: ast.c  interpreter.c  lexer.c  parser.c
tests/: general.c  parser_test.c
